grammars/usql/test/corpus/statements.txt
================================================================================
Empty input
:language(usql_postgres)
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
Empty statement
:language(usql_postgres)
================================================================================

 ;

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
One statement
:language(usql_postgres)
================================================================================

select 1;

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
Two statements on one line
:language(usql_postgres)
================================================================================

select 1; select 2;

--------------------------------------------------------------------------------

(source_file
  (statement)
  (statement))

================================================================================
A statement with no semicolon at the end of the input
:language(usql_postgres)
================================================================================

select * from t

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
A statement on several lines
:language(usql_postgres)
================================================================================

select 1
from t
where x = 2
;

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
A statement that a meta command runs
:language(usql_postgres)
================================================================================

select 1\g

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)))

================================================================================
A statement before a meta command on the next line
:language(usql_postgres)
================================================================================

select 1
\g

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)))

================================================================================
A meta command between two statements
:language(usql_postgres)
================================================================================

select 1; select 1\g

--------------------------------------------------------------------------------

(source_file
  (statement)
  (statement)
  (meta_command
    (command_name)))

================================================================================
Statements and meta commands on several lines
:language(usql_postgres)
================================================================================

 select 1\g


	select 2\g
 select 3;  \p   \z  foo bar \p\p select * from;
\p

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name))
  (statement)
  (meta_command
    (command_name))
  (statement)
  (meta_command
    (command_name))
  (meta_command
    (command_name)
    (word)
    (word))
  (meta_command
    (command_name))
  (meta_command
    (command_name)
    (word)
    (word)
    (word))
  (meta_command
    (command_name)))

================================================================================
A semicolon in parentheses
:language(usql_postgres)
================================================================================

select f(1; 2);
select 3;

--------------------------------------------------------------------------------

(source_file
  (statement)
  (statement))

================================================================================
A meta command in parentheses
:language(usql_postgres)
================================================================================

 select 1 (  \g )
 ;

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)
    (word))
  (statement))

================================================================================
Parentheses with no end
:language(usql_postgres)
================================================================================

(((()()

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
A closing parenthesis with no opening one
:language(usql_postgres)
================================================================================

select 1); select 2;

--------------------------------------------------------------------------------

(source_file
  (statement)
  (statement))

================================================================================
Parentheses around a string with a semicolon
:language(usql_postgres)
================================================================================

select (';' || x; y);

--------------------------------------------------------------------------------

(source_file
  (statement
    (string)))

================================================================================
Escaped semicolons and colons
:language(usql_postgres)
================================================================================

select \;\:foo\;
;

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
A positional parameter
:language(usql_postgres)
================================================================================

select $1 \bind a b c \g

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)
    (word)
    (word)
    (word))
  (meta_command
    (command_name)))
