grammars/usql/test/corpus/variables.txt
================================================================================
Variables in a statement
================================================================================

select * from :tbl where id = :id;

--------------------------------------------------------------------------------

(source_file
  (statement
    (variable
      (variable_name))
    (variable
      (variable_name))))

================================================================================
Quoted variables
================================================================================

select :'a_b', :"foo_bar_", :{?c};

--------------------------------------------------------------------------------

(source_file
  (statement
    (variable
      (variable_name))
    (variable
      (variable_name))
    (variable
      (variable_name))))

================================================================================
Variables with no space between them
================================================================================

select :a:b;

--------------------------------------------------------------------------------

(source_file
  (statement
    (variable
      (variable_name))
    (variable
      (variable_name))))

================================================================================
Variables at the start of the input
================================================================================

:a :b

--------------------------------------------------------------------------------

(source_file
  (statement
    (variable
      (variable_name))
    (variable
      (variable_name))))

================================================================================
Conditional variables
================================================================================

:{?a_b} :{?_foo_bar_}

--------------------------------------------------------------------------------

(source_file
  (statement
    (variable
      (variable_name))
    (variable
      (variable_name))))

================================================================================
A cast is not a variable
================================================================================

select '1251258098.1555901285'::numeric, x::int, a:::b;

--------------------------------------------------------------------------------

(source_file
  (statement
    (string)
    (variable
      (variable_name))))

================================================================================
A colon that does not start a variable
================================================================================

select a: = b, c :, :{x}, :{?}, :{?y;

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
A quoted variable with no closing quote
================================================================================

select :'a b' x;
select :"a" y;

--------------------------------------------------------------------------------

(source_file
  (statement
    (string))
  (statement
    (variable
      (variable_name))))

================================================================================
A quoted variable that is not well formed
================================================================================

select :'a b', :"c d", :'', :"";
\echo :'a b' :"c d" :'
\g (a=:'b c')

--------------------------------------------------------------------------------

(source_file
  (statement
    (string)
    (quoted_identifier)
    (string)
    (quoted_identifier))
  (meta_command
    (command_name)
    (word)
    (string)
    (word)
    (quoted_identifier)
    (word)
    (string))
  (meta_command
    (command_name)
    (option_list
      (option
        (word)
        (word)))))

================================================================================
A colon and a quote at the end of the input
================================================================================

select :'

--------------------------------------------------------------------------------

(source_file
  (statement
    (string)))

================================================================================
Variables in parentheses
================================================================================

select f(:a, (:'b'));

--------------------------------------------------------------------------------

(source_file
  (statement
    (variable
      (variable_name))
    (variable
      (variable_name))))

================================================================================
Variables are not in strings or comments
================================================================================

select ':a', ":b" -- :c
/* :d */;

--------------------------------------------------------------------------------

(source_file
  (statement
    (string)
    (quoted_identifier)
    (comment)
    (comment)))

================================================================================
Variables in arguments
================================================================================

\echo :foo :'foo' :"foo" :{?foo}
\set x pre:foo:bar

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (variable
      (variable_name))
    (variable
      (variable_name))
    (variable
      (variable_name))
    (variable
      (variable_name)))
  (meta_command
    (command_name)
    (word)
    (word)
    (variable
      (variable_name))
    (variable
      (variable_name))))

================================================================================
Names that are not ASCII
================================================================================

select :名前, :'ñ';

--------------------------------------------------------------------------------

(source_file
  (statement
    (variable
      (variable_name))
    (variable
      (variable_name))))
