grammars/usql/testdata/corpus/meta_commands.txt
================================================================================
A meta command with no argument
================================================================================

\q

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)))

================================================================================
Meta commands on one line
================================================================================

 \v \p

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name))
  (meta_command
    (command_name)))

================================================================================
Arguments
================================================================================

 \v   foo   bar  \p   zz

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (word)
    (word))
  (meta_command
    (command_name)
    (word)))

================================================================================
An unknown name
================================================================================

\very   foo   bar  \print   zz

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (word)
    (word))
  (meta_command
    (command_name)
    (word)))

================================================================================
Modifiers
================================================================================

\dS+ foo*
\dt+ public.*
\dtv
\dvt
\dfnS+
\l+
\lo_list+

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (modifier)
    (modifier)
    (word))
  (meta_command
    (command_name)
    (modifier)
    (word))
  (meta_command
    (command_name)
    (modifier)
    (modifier))
  (meta_command
    (command_name)
    (modifier)
    (modifier))
  (meta_command
    (command_name)
    (modifier)
    (modifier)
    (modifier))
  (meta_command
    (command_name)
    (modifier))
  (meta_command
    (command_name)
    (modifier)))

================================================================================
A name with letters that are not modifiers
================================================================================

\dtq
\d+S
\dSS

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name))
  (meta_command
    (command_name))
  (meta_command
    (command_name)))

================================================================================
A quote after a name
================================================================================

\echo'hi'

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)))

================================================================================
Quoted arguments
================================================================================

\echo 'it''s' "two words" 'a\'b'
\set foo 'bar''bar\r\n'

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (string)
    (quoted_identifier)
    (string))
  (meta_command
    (command_name)
    (word)
    (string)))

================================================================================
Quoted arguments glued to words
================================================================================

\echo 'pg://':foo'/':bar
\set x pre'mid'post

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (string)
    (variable
      (variable_name))
    (string)
    (variable
      (variable_name)))
  (meta_command
    (command_name)
    (word)
    (word)
    (string)
    (word)))

================================================================================
A quoted argument with no end
================================================================================

select 1\g '\g
select 2;

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)
    (string))
  (statement))

================================================================================
A list of options
================================================================================

select 1 \g (format=csv tuples_only title='a b') out.csv
\gx (format=aligned)
\watch (interval=2)
\chart bar (title=:t)
\crosstab (sort=desc) a b

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)
    (option_list
      (option
        (word)
        (word))
      (option
        (word))
      (option
        (word)
        (string)))
    (word))
  (meta_command
    (command_name)
    (option_list
      (option
        (word)
        (word))))
  (meta_command
    (command_name)
    (option_list
      (option
        (word)
        (word))))
  (meta_command
    (command_name)
    (word)
    (option_list
      (option
        (word)
        (variable
          (variable_name)))))
  (meta_command
    (command_name)
    (option_list
      (option
        (word)
        (word)))
    (word)
    (word)))

================================================================================
Parentheses in an argument of a command with no options
================================================================================

\copy src dst 'select 1' t(a,b)
\echo (x)

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (word)
    (word)
    (string)
    (word))
  (meta_command
    (command_name)
    (word)))

================================================================================
A pipe
================================================================================

select 1 \g |grep -v x
\o | cat > 'out.txt'

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)
    (pipe
      (shell_command)))
  (meta_command
    (command_name)
    (pipe
      (shell_command))))

================================================================================
A pipe that ends at a backslash
================================================================================

\o |cat \x

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (pipe
      (shell_command)))
  (meta_command
    (command_name)))

================================================================================
A shell command
================================================================================

\! ls -l
\!
\! echo 'a\b' "c\d" \p

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (shell_command))
  (meta_command
    (command_name))
  (meta_command
    (command_name)
    (shell_command))
  (meta_command
    (command_name)))

================================================================================
A command in backticks
================================================================================

\set now `date +%s`
\echo `echo :'foo'` x`y`z

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (word)
    (backtick_command
      (shell_command)))
  (meta_command
    (command_name)
    (backtick_command
      (shell_command))
    (word)
    (backtick_command
      (shell_command))
    (word)))

================================================================================
A command in backticks with no end
================================================================================

\echo `date
\echo `
select 1;

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (backtick_command
      (shell_command)))
  (meta_command
    (command_name)
    (backtick_command))
  (statement))

================================================================================
The separator
================================================================================

\echo hi \\ select 1;
\x \\ \\ select 2

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (word))
  (meta_command
    (command_name))
  (statement)
  (meta_command
    (command_name))
  (meta_command
    (command_name))
  (meta_command
    (command_name))
  (statement))

================================================================================
A backslash with no name
================================================================================

\
\

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name))
  (meta_command
    (command_name)))

================================================================================
Conditionals
================================================================================

\if :is_pg
  select 1;
  \if :{?v}
    select 2;
  \else
    select 3;
  \endif
\elif 'yes'
  select 4;
\endif

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (variable
      (variable_name)))
  (statement)
  (meta_command
    (command_name)
    (variable
      (variable_name)))
  (statement)
  (meta_command
    (command_name))
  (statement)
  (meta_command
    (command_name))
  (meta_command
    (command_name)
    (string))
  (statement)
  (meta_command
    (command_name)))

================================================================================
A conditional with no end
================================================================================

\if true
select 1;
\elif false

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (word))
  (statement)
  (meta_command
    (command_name)
    (word)))

================================================================================
Comments are not comments in arguments
================================================================================

\echo -- not a comment /* nor this */

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)))

================================================================================
Commands that usql runs from testdata
================================================================================

\set PGDB pg://postgres:P4ssw0rd@localhost
\connect :PGDB
\set ECHO all
\unset foo
\pset format csv
\prompt -int x 'Enter x: '
\i inc_test.sql
\cd ..
\setenv FOO bar
\getenv home HOME

--------------------------------------------------------------------------------

(source_file
  (meta_command
    (command_name)
    (word)
    (word)
    (variable
      (variable_name))
    (word))
  (meta_command
    (command_name)
    (variable
      (variable_name)))
  (meta_command
    (command_name)
    (word)
    (word))
  (meta_command
    (command_name)
    (word))
  (meta_command
    (command_name)
    (word)
    (word))
  (meta_command
    (command_name)
    (word)
    (word)
    (string))
  (meta_command
    (command_name)
    (word))
  (meta_command
    (command_name)
    (word))
  (meta_command
    (command_name)
    (word)
    (word))
  (meta_command
    (command_name)
    (word)
    (word)))
