grammars/usql/testdata/corpus/statements.txt
================================================================================
Empty input
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
Empty statement
================================================================================

 ;

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
One statement
================================================================================

select 1;

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
Two statements on one line
================================================================================

select 1; select 2;

--------------------------------------------------------------------------------

(source_file
  (statement)
  (statement))

================================================================================
A statement with no semicolon at the end of the input
================================================================================

select * from t

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
A statement on several lines
================================================================================

select 1
from t
where x = 2
;

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
A statement that a meta command runs
================================================================================

select 1\g

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)))

================================================================================
A statement before a meta command on the next line
================================================================================

select 1
\g

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)))

================================================================================
A meta command between two statements
================================================================================

select 1; select 1\g

--------------------------------------------------------------------------------

(source_file
  (statement)
  (statement)
  (meta_command
    (command_name)))

================================================================================
Statements and meta commands on several lines
================================================================================

 select 1\g


	select 2\g
 select 3;  \p   \z  foo bar \p\p select * from;
\p

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name))
  (statement)
  (meta_command
    (command_name))
  (statement)
  (meta_command
    (command_name))
  (meta_command
    (command_name)
    (word)
    (word))
  (meta_command
    (command_name))
  (meta_command
    (command_name)
    (word)
    (word)
    (word))
  (meta_command
    (command_name)))

================================================================================
A semicolon in parentheses
================================================================================

select f(1; 2);
select 3;

--------------------------------------------------------------------------------

(source_file
  (statement)
  (statement))

================================================================================
A meta command in parentheses
================================================================================

 select 1 (  \g )
 ;

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)
    (word))
  (statement))

================================================================================
Parentheses with no end
================================================================================

(((()()

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
A closing parenthesis with no opening one
================================================================================

select 1); select 2;

--------------------------------------------------------------------------------

(source_file
  (statement)
  (statement))

================================================================================
Parentheses around a string with a semicolon
================================================================================

select (';' || x; y);

--------------------------------------------------------------------------------

(source_file
  (statement
    (string)))

================================================================================
Escaped semicolons and colons
================================================================================

select \;\:foo\;
;

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
A positional parameter
================================================================================

select $1 \bind a b c \g

--------------------------------------------------------------------------------

(source_file
  (statement)
  (meta_command
    (command_name)
    (word)
    (word)
    (word))
  (meta_command
    (command_name)))
