grammars/usql/testdata/corpus/strings.txt
================================================================================
Strings
================================================================================

select '', 'a''b
z', 'it\'s';

--------------------------------------------------------------------------------

(source_file
  (statement
    (string)
    (string)
    (string)))

================================================================================
Adjacent strings
================================================================================

select 'a' 'b
z';

--------------------------------------------------------------------------------

(source_file
  (statement
    (string)
    (string)))

================================================================================
Quoted identifiers
================================================================================

select "", "a""b", "
";

--------------------------------------------------------------------------------

(source_file
  (statement
    (quoted_identifier)
    (quoted_identifier)
    (quoted_identifier)))

================================================================================
A string with no end
================================================================================

select 'abc;
select 2;
\g

--------------------------------------------------------------------------------

(source_file
  (statement
    (string)))

================================================================================
A quoted identifier with no end
================================================================================

select "foo

--------------------------------------------------------------------------------

(source_file
  (statement
    (quoted_identifier)))

================================================================================
Dollar quotes
================================================================================

select $$$$;
select $$
foob(
$$;
select $tag$ \v( ; $tag$;
select $a$ $b$ $a$, $1;

--------------------------------------------------------------------------------

(source_file
  (statement
    (dollar_string))
  (statement
    (dollar_string))
  (statement
    (dollar_string))
  (statement
    (dollar_string)))

================================================================================
A dollar quote that holds a meta command
================================================================================

select $$
\v(
$tag$$zz$$\g$$\g

--------------------------------------------------------------------------------

(source_file
  (statement
    (dollar_string))
  (meta_command
    (command_name))
  (meta_command
    (command_name)))

================================================================================
A dollar quote with no end
================================================================================

select $$foo;
select 2;

--------------------------------------------------------------------------------

(source_file
  (statement
    (dollar_string)))

================================================================================
A dollar sign in an identifier
================================================================================

select a$b$ from t$1;

--------------------------------------------------------------------------------

(source_file
  (statement))

================================================================================
Line comments
================================================================================

-- first
select * -- second
from t;
select--
1;

--------------------------------------------------------------------------------

(source_file
  (comment)
  (statement
    (comment))
  (statement
    (comment)))

================================================================================
Block comments
================================================================================

select /**/ 1;
select/* */2;
select * /*


--*/
;

--------------------------------------------------------------------------------

(source_file
  (statement
    (comment))
  (statement
    (comment))
  (statement
    (comment)))

================================================================================
A block comment with no end
================================================================================

select * /*
--
\g

--------------------------------------------------------------------------------

(source_file
  (statement)
  (comment))

================================================================================
Signs that do not start a comment
================================================================================

select 1-2, 3/4, a # b, c // d, `e`;

--------------------------------------------------------------------------------

(source_file
  (statement))
